
# Version x.y.z
- Added inner.control to fitTrack to control Newton optimization of random effects
- Added symmetric hyperbolic (sh) as possible measurement error model
- The Measurement class can now simulate from all 3 models (n,t,sh)

# Version 1.0.1
- Added namespaces to c++ code to avoid multiple definitions from TMB.
- Added imports from grDevices, graphics and utils.
- Small bug fixes for special cases in Measurement and Observation class
- Now possible to use several break methods from grDevices (Sturges, FD, scott) in roseplot
- New examples

# Version 1.0.0
- Added movement models: Discrete Time Correlated Random Walk (dcrw), Discrete Step lenght and Bearings model (dsb)
- Removed movement model mpctcrw
- Possibility of extracting and plotting step lengths and turning angles between predicted states for all models
- Support for modelling on a scale of either nautical miles or latitude/longitude for both states and observations.
- Removed bootstrap functionality
- defuncted argosTrack function
- Changed to reference classes: Animal, Observation, Measurement, Movement.
- Added functions to be called on the above: plot, plotMap, plotLon, plotLat, simTrack, fitTrack.
- This version is not backwards compatible with previous versions.

# Version 0.1.1
- Fixed error caused by TMB no longer exporting summary.sdreport


# Version 0.1.0
- Added movement models: Random Walk (rw) and Multiple Persistence Continuous Time Correlated Random Walk (mpctcrw)
- New residual types (besided the old ”smooth”): Smooth predictions (”smoothpred”), Simulated residuals (”simulated”), and one step residuals (”onestep”)
- Possibility of using multiple $log(\beta)$ parameters over time
- Added type=”map” to plot.argostrack to include background map in plot of estimated track


# Version 0.0.2
- First official release, submitted to Ecology
- Implemented Continuous Time Correlated Random Walk (ctcrw) with normal/t distributed measurement errors