@@ -14,6 +14,7 @@ export(Observation)
 export(RW)
 export(argosTrack)
 export(fitTrack)
+export(getTrack)
 export(plotLat)
 export(plotLon)
 export(plotMap)
