@@ -1,0 +1,24 @@
+% Generated by roxygen2 (4.1.1): do not edit by hand
+% Please edit documentation in R/getTrack.R
+\docType{methods}
+\name{getTrack,Observation-method}
+\alias{getTrack,Observation-method}
+\title{Extracts track from animal data}
+\usage{
+\S4method{getTrack}{Observation}(object, ...)
+}
+\arguments{
+\item{object}{\link{Observation} reference class object}
+
+\item{...}{Additional arguments passed to the appropriate method}
+}
+\value{
+A data frame of positions
+}
+\description{
+Extracts the observed track from an Observation object
+}
+\author{
+Christoffer Moesgaard Albertsen
+}
+
