@@ -3,6 +3,7 @@
 - Added inner.control to fitTrack to control Newton optimization of random effects
 - Added symmetric hyperbolic (sh) as possible measurement error model
 - The Measurement class can now simulate from all 3 models (n,t,sh)
+- Added getTrack function to extract estimated track as data frame
 
 # Version 1.0.1
 - Added namespaces to c++ code to avoid multiple definitions from TMB.
